2008-08-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/figures/mouse-a11y-dwell-click-type-applet.png
	* modified trunk/help/C/figures/mouse-a11y-ssc-delay-slider.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-gesture-mapping.png
	* modified trunk/help/C/figures/mouse-a11y-pointer-capture-preferences.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-mode-choice.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-ctw-checkbox.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-motion-treshold.png
	* modified trunk/help/C/mousetweaks.xml

	Update some figures and fix typo in the manual.

2008-08-12  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es/es.po: Updated Spanish translation

2008-08-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-04  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/figures/mouse-a11y-dwell-click-type-applet.png

	Remove Ubuntu logo from figure with Dwell Click applet.

2008-05-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation

2008-07-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/mousetweaks.xml
	* modified trunk/help/C/figures/mouse-a11y-dwell-click-type-applet.png

	Updates to reflect the imprisonments done to mousetweaks for GNOME 2.24.

2008-03-09  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation
	* es/figures/*.png: Added screenshots

2008-02-14  Simos Xenitellis  <simos@gnome.org>

	* Makefile.am: Added el (Greek)
	* el/el.po: Added Greek translation by Giannis Katsampiris.

2008-02-13 Gerd Kohlberger <gerdk@svn.gnome.org>           

	* Makefile.am: Added oc to DOC_LINGUAS

2008-02-02  Yannig Marchegay  <yannig@marchegay.org>           

	* oc/oc.po: New Occitan translation.
